--- a/main-app/index.html
+++ b/main-app/index.html
@@ -5,6 +5,83 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>K8s Agent 管理平台</title>
+
+  <!-- CRITICAL: Suppress Wujie benign errors as early as possible -->
+  <script>
+    (function() {
+      'use strict';
+
+      // Backup originals
+      var _consoleError = console.error;
+      var _consoleWarn = console.warn;
+
+      // Filter function - check if error should be ignored
+      function shouldIgnoreError(msg, source) {
+        if (!msg) msg = '';
+        if (!source) source = '';
+
+        // Check message content
+        if (msg.indexOf('此报错可以忽略') > -1) return true;
+        if (msg.indexOf('iframe主动中断') > -1) return true;
+        if (msg.indexOf('stopMainAppRun') > -1) return true;
+
+        // Check if it's empty error from utils.ts (Wujie internal)
+        if (source.indexOf('utils.ts') > -1 && (!msg || msg === 'Uncaught Error')) return true;
+
+        return false;
+      }
+
+      // Filter function for console arguments
+      function isWujieBenignError(args) {
+        var msg = '';
+        try {
+          msg = String(args[0]?.message || args[0] || '');
+        } catch (e) {
+          return false;
+        }
+        return shouldIgnoreError(msg, '');
+      }
+
+      // Override console methods
+      console.error = function() {
+        if (!isWujieBenignError(arguments)) {
+          _consoleError.apply(console, arguments);
+        }
+      };
+
+      console.warn = function() {
+        if (!isWujieBenignError(arguments)) {
+          _consoleWarn.apply(console, arguments);
+        }
+      };
+
+      // Global error handler with highest priority
+      window.addEventListener('error', function(event) {
+        var msg = String(event.message || '');
+        var src = String(event.filename || '');
+
+        if (shouldIgnoreError(msg, src)) {
+          event.stopImmediatePropagation();
+          event.stopPropagation();
+          event.preventDefault();
+          return true;
+        }
+      }, true);
+
+      // Also handle window.onerror
+      var _onerror = window.onerror;
+      window.onerror = function(message, source, lineno, colno, error) {
+        var msg = String(message || '');
+        var src = String(source || '');
+
+        if (shouldIgnoreError(msg, src)) {
+          return true;
+        }
+
+        return _onerror ? _onerror(message, source, lineno, colno, error) : false;
+      };
+    })();
+  </script>
 </head>
 <body>
   <div id="app"></div>
